<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/marg_16"
    tools:context=".fragments.CadastroFragment">

    <TextView
        android:id="@+id/cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastro"
        android:textSize="@dimen/text_16"
        android:textStyle="bold"
        android:layout_marginHorizontal="@dimen/marg_16"
        android:layout_marginTop="@dimen/marg_30"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/etNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nome"
        android:textSize="@dimen/text_14"
        android:inputType="textPersonName"
        android:importantForAutofill="no"
        android:layout_marginHorizontal="@dimen/marg_16"
        android:layout_marginTop="@dimen/marg_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cadastro" />
    <EditText
        android:id="@+id/etHoras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/horas_trab"
        android:textSize="@dimen/text_14"
        android:inputType="numberDecimal"
        android:importantForAutofill="no"
        android:layout_marginHorizontal="@dimen/marg_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNome"/>
    <EditText
        android:id="@+id/etValor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/valor_hr"
        android:textSize="@dimen/text_14"
        android:inputType="numberDecimal"
        android:importantForAutofill="no"
        android:layout_marginHorizontal="@dimen/marg_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etHoras"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marg_40"
        android:layout_marginHorizontal="@dimen/marg_30"
        android:text="@string/calcular"
        android:backgroundTint="@color/laranja"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etValor"/>

</androidx.constraintlayout.widget.ConstraintLayout>